--- a/08. Adversarial Machine Learning.ipynb
+++ b/08. Adversarial Machine Learning.ipynb
@@ -19,15 +19,37 @@
    },
    "source": [
     "<h1>Sisällysluettelo<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Adversarial-Machine-Learning\" data-toc-modified-id=\"Adversarial-Machine-Learning-1\">Adversarial Machine Learning</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Adversarial-Machine-Learning\" data-toc-modified-id=\"Adversarial-Machine-Learning-1\">Adversarial Machine Learning</a></span><ul class=\"toc-item\"><li><span><a href=\"#Terminology\" data-toc-modified-id=\"Terminology-1.1\">Terminology</a></span></li></ul></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adversarial Machine Learning"
+    "# Adversarial Machine Learning\n",
+    "\n",
+    "Koneoppimisen käyttöasteen noustessa sen luotettavuus on entistä tarkemman syynin alla, sillä vihamielinen vaikuttaminen ulottuu myös malleihin. Vihamielisen koneoppimisen (*adversarial machine learning*) tutkimus keskittyy mallinnustutkimukseen vihamielisissä ympäristöissä. Tällä alueella on onnistuttu toteuttamaan hyökkäyksiä mm. antivirusohjelmistoja ja roskapostisuotimia vastaan. Mallinnusmenetelmien haavoittuvuudet voivat johtua itse algoritmien rajoituksista, toteutuksesta tai näiden yhdistelmästä."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Terminology\n",
+    "\n",
+    "Tutkimuksen alkuvaiheissa keskityttiin mm. laadullista analyysiä helpottavan taksonomian muodostamiseen. Vihamielisen koneoppimisen kolme ulottuvuutta ovat tämän taksonomian mukaisesti:\n",
+    "\n",
+    " - *Vaikutus*: Syihin perustuvat hyökkäykset (*causative attacks*) pyrkivät vaikuttamaan jo koulutuksessa käytettävään dataan. Heikoimmassa asemassa ovat näissä hyökkäyksissä jatkuvasti oppivat menetelmät (*online algorithms*), jotka pyrkivät oppimaan jatkuvasti uusista havainnoista ja tarkentamaan päätösrajapintojaan ajan myötä. Tutkivat hyökkäykset (*exploratory attacks*) keskittyvät vuorostaan vain koulutuksen jälkeisen mallin toiminnan ymmärtämiseen ja täten hyväksikäyttöön.\n",
+    " - *Tarkkuus*: Kohdistetut hyökkäykset (*targeted attacks*) pyrkivät vaikuttamaan ohjatusti ja aiotusti muuttamaan mallin päätösrajapintaa tietyn tavoitteen mukaiseksi. Kohdistamattomat hyökkäykset (*indiscriminate attacks*) pyrkivät vain tekemään mallista ylipäätään epätarkemman ja epäluotettavan.\n",
+    " - *Tietoturvan loukkaus*: Yhtenäisyyteen kohdistuvat hyökkäykset (*integrity attacks*) pyrkivät vaikuttamaan malliin siten, että ne vähentävät oikein luokiteltujen havaintojen osuutta (*true positive, recall*). Saatavuuten kohdistuvat hyökkäykset (*availability attacks*) vuorostaan keskittyvät rampauttamaan kohdejärjestelmän mallin tunnistuskykyä, sillä väärien tunnistustulosten (*false positive*) lisääntyessä manuaalinen työmäärä kasvaa ja mallin kokonaisluotettavuus laskee."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
